# rdf_knowledge_extractor

./: COMPLETE_WORKFLOW.md  Cargo.toml  DEMO_WORKFLOW.md  OXIGRAPH_IMPLEMENTATION.md  README.md  SPARQL_EXAMPLES.md  company_intelligence_config.yaml  example_config.yaml  generated_intelligence_report.md  output.jsonld  populated_sales_report.md  workflow_example.sh
example-sales/: DEMONSTRATION.md  SIMPLE_WORKFLOW_DEMO.md  extraction_config.yaml  sales_intelligence_ontology.ttl  workflow_example.sh
example-sales-2/: README.md  knowledge_graph.db  knowledge_graph.nt  run_example.sh  sales_intelligence_config.yaml  test_fast_simple.db
example-sales-2/source-data/: crm_company_export.txt  linkedin_sales_navigator_export.txt
example-sales-3/: 1_build_knowledge_graph.sh  2_populate_template.sh  CURRENT_STATUS.md  README.md
example-sales-3/output/: knowledge_graph.db  knowledge_graph.nt  latest_report.md  sales_report_20250917_143743.md
example-sales/source-data/: crm_export_techcorp.txt  linkedin_research_techcorp.txt  sample_company_data.txt  techcorp_intelligence.txt
example-sales/sparql_queries/: template_population_queries.sparql
example-sales/templates/: company_intelligence_template.md
examples/: acme_corp_intelligence.txt  config.yaml  sample_document.txt
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: extractor.rs  llm_client.rs  mod.rs
src/handlers/: mod.rs
src/knowledge_graph/: mod.rs  oxigraph_store.rs
templates/: company_intelligence_report.yaml  sales_llm_template.yaml  sales_target_companies.yaml  target_companies_template.yaml
(+4 files in other folders)
