[package]
name = "rdf_knowledge_extractor"
version = "1.0.0"
edition = "2021"
authors = ["RDF Knowledge Extractor"]
description = "Extract structured RDF triples from documents using LLM"
license = "MIT"

[features]
default = []
oxigraph = ["dep:oxigraph"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client for vLLM API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"

# RDF processing and knowledge graph
oxigraph = { version = "0.5", optional = true }
# sparql-smith = "0.1"
rio_api = "0.8"
rio_turtle = "0.8"

# Document processing
pdf-extract = "0.7"
scraper = "0.22"
encoding_rs = "0.8"
url = "2.5"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
regex = "1.11"
html-escape = "0.2"
handlebars = "6.2"
walkdir = "2.5"

# Progress bars
indicatif = "0.17"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
